# email-example-rs

./: .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml
config/: config.toml
secrets/: prod.ini.example
src/: config.rs  lib.rs  main.rs
